@@ -80,11 +80,11 @@ create Herwig++::SudakovFormFactor GtoGGSudakov
 create Herwig++::SudakovFormFactor GtoQQbarSudakov
 create Herwig++::SudakovFormFactor QtoQGammaSudakov
 create Herwig++::SudakovFormFactor QtoGQSudakov
-set QtoQGSudakov:PDFmax 100
-set GtoGGSudakov:PDFmax 100
-set GtoQQbarSudakov:PDFmax 100
-set QtoQGammaSudakov:PDFmax 100
-set QtoGQSudakov:PDFmax 100
+set QtoQGSudakov:PDFmax 1.9
+set GtoGGSudakov:PDFmax 1.0
+set GtoQQbarSudakov:PDFmax 1000.0
+set QtoQGammaSudakov:PDFmax 1.0
+set QtoGQSudakov:PDFmax 6.5
 set QtoQGSudakov:SplittingFunction theQtoQGSplitFn
 set QtoQGSudakov:Alpha theShowerAlphaQCD
 set QtoQGSudakov:Variables theShowerVariables
